--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,11 +123,13 @@ jobs:
             `# The name of the output file`      \
              ./system.zip                        \
             `# The files that will be included.` \
-            system.json                          \
+            module.json                          \
+            diceset.js                           \
             template.json                        \
             README.md                            \
             CHANGELOG.md                            \
             LICENSE                              \
+            models/                              \
             templates/                           \
             module/                              \
             css/                                 \
@@ -151,13 +153,13 @@ jobs:
           tag: ${{ github.event.release.tag_name }}
           body: ${{ github.event.release.body }}
 
-      - name: Deploy Release
-        id: deploy_release
-        uses: fjogeleit/http-request-action@v1
-        with:
-          url: 'https://api.foundryvtt.com/_api/packages/release_version'
-          method: 'POST'
-          contentType: 'application/json'
-          customHeaders: '{"Authorization": "${{ secrets.FVTT_PACKAGE_RELEASE_TOKEN }}"}'
-          data: '{"id": "cthack","dry-run":true,"release":{"version":"${{github.event.release.tag_name}}","manifest":"https://github.com/12-Monkeys-Developers/cthulhuhack/releases/download/${{github.event.release.tag_name}}/system.json","notes":"https://github.com/12-Monkeys-Developers/cthulhuhack/blob/main/CHANGELOG.md","compatibility":{"minimum":"11","verified":"11"}}}'
+#      - name: Deploy Release
+#        id: deploy_release
+#        uses: fjogeleit/http-request-action@v1
+#        with:
+#          url: 'https://api.foundryvtt.com/_api/packages/release_version'
+#          method: 'POST'
+#          contentType: 'application/json'
+#          customHeaders: '{"Authorization": "${{ secrets.FVTT_PACKAGE_RELEASE_TOKEN }}"}'
+#          data: '{"id": "cthack","dry-run":true,"release":{"version":"${{github.event.release.tag_name}}","manifest":"https://github.com/12-Monkeys-Developers/cthulhuhack/releases/download/${{github.event.release.tag_name}}/system.json","notes":"https://github.com/12-Monkeys-Developers/cthulhuhack/blob/main/CHANGELOG.md","compatibility":{"minimum":"11","verified":"11"}}}'
       
